# chiltota

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
api/: Cargo.toml
api/src/: business_handler.rs  lib.rs  test_handler.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/business/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/test/: create.rs  delete.rs  read.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: .env  Cargo.toml
infrastructure/migrations/2023-06-07-204920_tests/: down.sql  up.sql
infrastructure/migrations/2023-06-16-030646_business/: down.sql  up.sql
infrastructure/migrations/2023-06-20-020915_business/: down.sql  up.sql
migrations/2023-05-25-164252_test/: down.sql  up.sql
migrations/2023-06-01-033532_ecommerce/: down.sql  up.sql
shared/: Cargo.toml
shared/src/: generate_numbers.rs  lib.rs  response_models.rs
src/: connection.rs  main.rs  schema.rs
src/tests/: handler.rs  mod.rs  repository.rs  router.rs
