# domain/Cargo.toml

[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.3", features = ["v4"] }
